Add content_diff 500 errors
